# lvmguider

./: CHANGELOG.md  Dockerfile  README.md  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: docker.yml  lint.yml  release.yml  test.yml
docker/: Dockerfile  docker-entrypoint.sh  matplotlibrc
docs/sphinx/: api.rst  changelog.md  conf.py  getting-started.rst  index.rst
scripts/: load_all_to_db.py  process_all_lco.py
src/lvmguider/: __init__.py  __main__.py  astrometrynet.py  cameras.py  coadd.py  dataclasses.py  extraction.py  focus.py  guider.py  maskbits.py  plotting.py  tools.py  transformations.py  types.py
src/lvmguider/actor/: __init__.py  actor.py
src/lvmguider/actor/commands/: __init__.py  corrections.py  expose.py  focus.py  guide.py  set_pixel.py  start.py  status.py  stop.py
src/lvmguider/etc/: datamodel.yml  lvm.sci.guider.yml  lvm.skye.guider.yml  lvm.skyw.guider.yml  lvm.spec.guider.yml  lvmguider.yml  lvmtrurl.yml
src/lvmguider/images/: image.py  processor.py
src/lvmguider/images/processors/astrometry/: __init__.py  astrometry.py  astrometrydotlocal.py
src/lvmguider/images/processors/background/: __init__.py  background.py  daophot.py  darkimage.py  pysep.py
src/lvmguider/images/processors/detection/: __init__.py  daophot.py  pysep.py
tests/: conftest.py  test_lvmguider.py
