[tool.poetry]
name = "lvmguider"
version = "0.4.2"
description = "Temporary package for LVM guiding and focusing"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmguider"
repository = "https://github.com/sdss/lvmguider"
documentation = "https://lvmguider.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lvmguider", from = "src" }
]
include = ["src/lvmguider/etc/*"]

[tool.poetry.scripts]
lvmguider = "lvmguider.__main__:main"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
sdsstools = "^1.2.3"
sdss-clu = "^2.2.0"
click-default-group = "^1.2.2"
typing-extensions = "^4.5.0"
astropy = "^6.0.0"
pandas = "^2.0.0"
sep = "^1.2.1"
seaborn = "^0.12.2"
numpy = "^1.24.2"
scipy = "^1.10.1"
simple-pid = "^2.0.0"
matplotlib = "^3.7.2"
peewee = "^3.16.3"
pgpasslib = "^1.1.0"
psycopg2-binary = "^2.9.7"
nptyping = "^2.5.0"
fastparquet = "^2023.8.0"
watchdog = "^3.0.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
matplotlib = ">=3.1.1"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
black = ">=20.8b1"
Sphinx = ">=4.0.0"
furo = ">=2021.9.22"
sphinx-copybutton = ">=0.4.0"
sphinx-click = ">=3.0.1"
sphinx-jsonschema = ">=1.16.11"
myst-parser = ">=0.15.2"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
pandas-stubs = ">=2.0.2.230605"
ruff = ">=0.0.284"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py311'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["lvmguider"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lvmguider --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/lvmguider/*"]
omit = [
    "*/__init__.py",
    "src/lvmguider/__main__.py",
    "src/lvmguider/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
