[project]
name = "lvmguider"
version = "0.8.1"
description = "LVM guiding and focusing"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "sdsstools>=1.9.5",
    "sdss-clu>=2.6.0",
    "click-default-group>=1.2.2",
    "typing-extensions>=4.5.0",
    "astropy>=6.0.0; python_version < '3.11'",
    "astropy>=7.0.0; python_version >= '3.11'",
    "pandas>=2.0.0",
    "sep>=1.4.1",
    "seaborn>=0.13.2",
    "numpy>=2.0.0; python_version >= '3.11'",
    "numpy>=1.21.0,<2.0.0; python_version < '3.11'",
    "scipy>=1.10.1",
    "simple-pid>=2.0.0",
    "matplotlib>=3.7.2",
    "peewee>=3.16.3",
    "pgpasslib>=1.1.0",
    "psycopg2-binary>=2.9.7",
    "fastparquet>=2023.8.0",
    "watchdog>=3.0.0",
    "pyarrow>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmguider"
Repository = "https://github.com/sdss/lvmguider"
Documentation = "https://lvmguider.readthedocs.org"

[project.scripts]
lvmguider = "lvmguider.__main__:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.1.1",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=4.0.0",
    "furo>=2021.9.22",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "myst-parser>=0.15.2",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "pandas-stubs>=2.0.2.230605",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvmguider"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lvmguider --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/lvmguider/*"]
omit = [
    "*/__init__.py",
    "src/lvmguider/__main__.py",
    "src/lvmguider/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmguider"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvmguider"]
